--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'maven-publish'
 
 group = 'com.github.ruifengx'
 version = '1.16.5-1.0-SNAPSHOT'
@@ -183,3 +184,21 @@ jar {
 }
 
 jar.finalizedBy('reobfJar')
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ruifengx/skyland-utils")
+            credentials {
+                username = System.getenv("USERNAME")
+                password = System.getenv("TOKEN")
+            }
+        }
+    }
+    publications {
+        modJar(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
