--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
         maven { url = 'https://maven.minecraftforge.net' }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         maven { url = "https://dvs1.progwml6.com/files/maven/" }
+        maven { url = "https://nexus.resourcefulbees.com/repository/maven-public/" }
+        maven { url = 'https://www.cursemaven.com' }
+        maven { url = 'https://maven.tterrag.com' }
         mavenCentral()
     }
     dependencies {
@@ -56,6 +59,10 @@ minecraft {
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
 
+            // Enable mixins for dependencies
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+
             arg "-mixin.config=skyland-utils.mixins.json"
 
             mods {
@@ -79,6 +86,10 @@ minecraft {
             // You can set various levels here.
             // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
             property 'forge.logging.console.level', 'debug'
+
+            // Enable mixins for dependencies
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
             arg "-mixin.config=skyland-utils.mixins.json"
 
@@ -128,11 +139,19 @@ repositories {
         name 'DVS1 Maven FS'
         url 'https://dvs1.progwml6.com/files/maven'
     }
-    // maven { // Create from CurseForge
-    //     name 'Curse Maven'
-    //     url 'https://www.cursemaven.com'
-    //     content { includeGroup "curse.maven" }
-    // }
+    maven { // Blame
+        name 'Blame Maven'
+        url "https://nexus.resourcefulbees.com/repository/maven-public/"
+    }
+    maven { // Flywheel
+        name "tterrag maven"
+        url "https://maven.tterrag.com/"
+    }
+    maven { // Create from CurseForge
+        name 'Curse Maven'
+        url 'https://www.cursemaven.com'
+        content { includeGroup "curse.maven" }
+    }
 }
 
 dependencies {
@@ -151,8 +170,10 @@ dependencies {
     // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
     compile fg.deobf('slimeknights.mantle:Mantle:1.16.5-1.6.109')
     compile fg.deobf('slimeknights.tconstruct:TConstruct:1.16.5-3.0.4.214')
-    // compile fg.deobf('curse.maven:create-328085:3278516')
+    compile fg.deobf("com.jozufozu.flywheel:Flywheel:1.16-0.1.1.25")
+    compile fg.deobf('curse.maven:create-328085:3386319')
     runtimeOnly fg.deobf("mezz.jei:jei-1.16.5:7.7.0.107")
+    runtimeOnly fg.deobf("com.telepathicgrunt:Blame:1.16.5-3.2.3-forge")
 
     // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
     // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
